# api/swagger/swagger.yaml
@@ -13,29 +13,28 @@ securityDefinitions:
     name: Authorization
     in: header
     description: |
-     For accessing the API a valid JWT token must be passed in all the queries in
-     the 'Authorization' header.
-  
-  
-     A valid JWT token is generated by the API and retourned as answer of a call
-     to the route /login giving a valid user & password.
-  
-  
-     The following syntax must be used in the 'Authorization' header :
-  
-         Bearer xxxxxx.yyyyyyy.zzzzzz
+      For accessing the API a valid JWT token must be passed in all the queries in
+      the 'Authorization' header.
+
+
+      A valid JWT token is generated by the API and retourned as answer of a call
+      to the route /login giving a valid user & password.
+
+
+      The following syntax must be used in the 'Authorization' header :
+
+          Bearer xxxxxx.yyyyyyy.zzzzzz
 
 consumes:
   - application/json
 produces:
   - application/json
 paths:
-
   /oauth/token:
     x-swagger-router-controller: main-controller
     post:
       tags:
-      - User Authentication
+        - User Authentication
       operationId: loginPost
       summary: "Authorization for the access of other APIs"
       description: "Login with a valid credential"
@@ -59,33 +58,11 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
-  # /logout:
-  #   x-swagger-router-controller: main-controller
-  #   post:
-  #     tags:
-  #     - User Authentication
-  #     operationId: logoutPost
-  #     summary: "Logout from the session"
-  #     description: "Logout will destroy your access token"
-  #     security:
-  #       - Bearer: []
-  #     x-security-scopes:
-  #       - admin
-  #     responses:
-  #       "200":
-  #         description: "Success"
-  #         schema:
-  #           $ref: "#/definitions/Resource"
-  #       "404":
-  #         description: "Access Denied"
-  #         schema:
-  #           $ref: "#/definitions/Error"
-
   /appUser/{user_id}:
     x-swagger-router-controller: main-controller
     get:
       tags:
-      - User Authentication
+        - User Authentication
       operationId: appUser
       summary: "Get App User Involvements"
       description: "Fetch app-user associated with the authorized user"
@@ -115,10 +92,10 @@ paths:
     x-swagger-router-controller: upload-controller
     post:
       tags:
-      - Supplementary Document File
+        - Supplementary Document File
       operationId: uploadSupplementaryDoc
       consumes:
-        - multipart/form-data      
+        - multipart/form-data
       summary: "Upload a Supplementary Document"
       description: "Upload the supplementary document before crraeting backfill/disposal requests"
       # security:
@@ -130,8 +107,8 @@ paths:
           name: "supplementary_file"
           description: "Supplementary Document"
           required: true
-          type: file  
-          x-mimetype: image/png, image/jpeg, application/pdf           
+          type: file
+          x-mimetype: image/png, image/jpeg, application/pdf
       responses:
         "200":
           description: "Success"
@@ -140,13 +117,13 @@ paths:
         "404":
           description: "Access Denied"
           schema:
-            $ref: "#/definitions/Error"         
+            $ref: "#/definitions/Error"
 
   /deleteSupplementaryDoc:
     x-swagger-router-controller: upload-controller
     post:
       tags:
-      - Supplementary Document File
+        - Supplementary Document File
       operationId: deleteSupplementaryDoc
       summary: "Delete Supplementary Document"
       description: "Remove a supplementary document by a given id"
@@ -168,13 +145,13 @@ paths:
         "404":
           description: "Access Denied"
           schema:
-            $ref: "#/definitions/Error"         
+            $ref: "#/definitions/Error"
 
   /projectByDepartment/{department_key}:
     x-swagger-router-controller: main-controller
     get:
       tags:
-      - Manage & View Requests (Backfill/Disposal)
+        - Manage & View Requests (Backfill/Disposal)
       operationId: projectByDepartment
       summary: "List all projects by a given depertment key"
       description: "Get details of all projects by a selected department"
@@ -202,7 +179,7 @@ paths:
     x-swagger-router-controller: create_request-controller
     post:
       tags:
-      - Manage & View Requests (Backfill/Disposal)
+        - Manage & View Requests (Backfill/Disposal)
       operationId: createRequest
       summary: "Request Creation"
       description: "Create a Backfill/Disposal Request"
@@ -226,16 +203,53 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
-  /listUserRequests/{user_id}/{request_type}:
+  # /listUserRequests/{user_id}/{request_type}:
+  /listUserRequests/{user_id}:
     x-swagger-router-controller: list_requests-controller
     get:
       tags:
-      - Manage & View Requests (Backfill/Disposal)
+        - Manage & View Requests (Backfill/Disposal)
       operationId: listUserRequests
       summary: "List User Created Disposal/Backfill Requests"
       description: "Get User Created Disposal/Backfill Requests"
-      security:
-        - Bearer: []
+      # security:
+      #   - Bearer: []
+      x-security-scopes:
+        - admin
+      parameters:
+        - name: "user_id"
+          in: "path"
+          description: "User ID"
+          required: true
+          type: "string"
+        # - name: "request_type"
+        #   in: "path"
+        #   description: "Request Type"
+        #   required: true
+        #   type: "string"
+        #   enum: [Disposal, Backfill]
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/ListRequest"
+        "404":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+
+  /listGlobalRequests/{user_id}/{request_type}:
+    x-swagger-router-controller: list_requests-controller
+    get:
+      tags:
+        - Manage & View Requests (Backfill/Disposal)
+      operationId: listGlobalRequests
+      summary: "List Global Disposal/Backfill Requests"
+      description: "Get Disposal/Backfill Requests which are not Created by User"
+      # security:
+      #   - Bearer: []
       x-security-scopes:
         - admin
       parameters:
@@ -262,47 +276,11 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
-  /listGlobalRequests/{user_id}/{request_type}:
-    x-swagger-router-controller: list_requests-controller
-    get:
-      tags:
-      - Manage & View Requests (Backfill/Disposal)
-      operationId: listGlobalRequests
-      summary: "List Global Disposal/Backfill Requests"
-      description: "Get Disposal/Backfill Requests which are not Created by User"
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - admin
-      parameters:
-        - name: "user_id"
-          in: "path"
-          description: "User ID"
-          required: true
-          type: "string"
-        - name: "request_type"
-          in: "path"
-          description: "Request Type"
-          required: true
-          type: "string"
-          enum: [Disposal, Backfill]
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            type: array
-            items:
-              $ref: "#/definitions/ListRequest"
-        "404":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"  
-
   /requestDetails/{request_id}/{user_id}:
     x-swagger-router-controller: request_details-controller
     get:
       tags:
-      - Manage & View Requests (Backfill/Disposal)
+        - Manage & View Requests (Backfill/Disposal)
       operationId: requestDetails
       summary: "Request Details"
       description: "Get Request Details"
@@ -340,7 +318,7 @@ paths:
       summary: "List User Created Disposal/Backfill Requests with Matches"
       description: "Get User Created Disposal/Backfill Requests with Matches"
       security:
-        - Bearer: [ ]
+        - Bearer: []
       x-security-scopes:
         - admin
       parameters:
@@ -354,7 +332,7 @@ paths:
           description: "Request Type"
           required: true
           type: "string"
-          enum: [ Disposal, Backfill ]
+          enum: [Disposal, Backfill]
       responses:
         "200":
           description: "Success"
@@ -493,7 +471,7 @@ paths:
     x-swagger-router-controller: update_request-controller
     put:
       tags:
-      - Manage & View Requests (Backfill/Disposal)
+        - Manage & View Requests (Backfill/Disposal)
       operationId: updateRequest
       summary: "Updating Request"
       description: "Update an Existing Backfill/Disposal Request"
@@ -515,13 +493,13 @@ paths:
         "500":
           description: "Request Updating Failure"
           schema:
-            $ref: "#/definitions/Error"        
+            $ref: "#/definitions/Error"
 
   /deleteRequest/{request_id}/{user_id}/{department_key}:
     x-swagger-router-controller: delete_request-controller
     delete:
       tags:
-      - Manage & View Requests (Backfill/Disposal)
+        - Manage & View Requests (Backfill/Disposal)
       operationId: deleteRequest
       summary: "Delete Request"
       description: "Delete user-created request"
@@ -555,6 +533,101 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /projects/{id}:
+    x-swagger-router-controller: project-controller
+    get:
+      tags:
+        - Projects
+      operationId: listProjects
+      summary: "Get projects"
+      description: "Fetch app projects"
+      # security:
+      #   - Bearer: []
+      x-security-scopes:
+        - admin
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/AppUser"
+        "404":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+
+  /projectStaff/{department_key}:
+    x-swagger-router-controller: project-controller
+    get:
+      tags:
+        - Projects
+      operationId: projectStaff
+      summary: "Get project staff"
+      description: "Fetch app project staff"
+      # security:
+      #   - Bearer: []
+      x-security-scopes:
+        - admin
+      parameters:
+        - name: "department_key"
+          in: "path"
+          description: "ID"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/AppUser"
+        "404":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+
+  /allProjectByPage/{currentPage}/{pageSize}:
+    x-swagger-router-controller: project-controller
+    get:
+      tags:
+        - Projects
+      operationId: allProjectByPage
+      summary: "Get projects by page"
+      description: "Fetch app projects by page"
+      # security:
+      #   - Bearer: []
+      x-security-scopes:
+        - admin
+      parameters:
+        - name: "currentPage"
+          in: "path"
+          description: "Page number"
+          required: true
+          type: "string"
+        - name: "pageSize"
+          in: "path"
+          description: "Page size"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/AppUser"
+        "404":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+
 definitions:
   Authentication:
     type: object
@@ -564,7 +637,7 @@ definitions:
         example: "user2@hiphing.com.hk"
       password:
         type: string
-        example: "pw2"  
+        example: "pw2"
   AppUser:
     properties:
       user_id:
@@ -660,10 +733,10 @@ definitions:
         type: "string"
       filling_purpose:
         type: "string"
-        enum: [ Permanent, Temporary ]
+        enum: [Permanent, Temporary]
       material_type:
         type: "string"
-        enum: [ Soil, Rock, Broken Concrete ]
+        enum: [Soil, Rock, Broken Concrete]
       material_quality:
         type: "string"
       material_volume:
@@ -693,10 +766,10 @@ definitions:
               type: "string"
             filling_purpose:
               type: "string"
-              enum: [ Permanent, Temporary ]
+              enum: [Permanent, Temporary]
             material_type:
               type: "string"
-              enum: [ Soil, Rock, Broken Concrete ]
+              enum: [Soil, Rock, Broken Concrete]
             material_quality:
               type: "string"
             material_volume:
@@ -712,7 +785,13 @@ definitions:
               type: "string"
             status:
               type: "string"
-              enum: [ Not confirmed, Our side confirmed, Other side confirmed, Both confirmed ]
+              enum:
+                [
+                  Not confirmed,
+                  Our side confirmed,
+                  Other side confirmed,
+                  Both confirmed,
+                ]
   CreateRequest:
     properties:
       user_id:
@@ -849,7 +928,7 @@ definitions:
         example: "Mac Jayson,Dulton Jr."
       contact_phones:
         type: "string"
-        example: "(111)1111 111,(222)2222 222"      
+        example: "(111)1111 111,(222)2222 222"
   RequestDetails:
     properties:
       request_info:
@@ -871,7 +950,7 @@ definitions:
             format: "date-time"
           schedule_status:
             type: "string"
-            enum: [Preliminary, Confirmed]  
+            enum: [Preliminary, Confirmed]
           remarks:
             type: "string"
       project_info:
@@ -889,7 +968,7 @@ definitions:
       contact_info:
         type: array
         items:
-          properties:      
+          properties:
             name:
               type: "string"
             phone:
